--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "index.ts",
   "repository": "https://github.com/DexKit/coins-league.git",
-  "author": "JoaoCampos89 <jcampos893@gmail.com>",
+  "author": "JoaoCampos89 <info@dexkit.com>",
   "scripts": {
     "test": "npx hardhat -r dotenv/config test"
   },
@@ -11,15 +11,24 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/test-helpers": "^0.5.12",
+    "@symfoni/hardhat-react": "^0.3.0",
+    "@typechain/ethers-v5": "^7.0.1",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.10",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.3",
-    "hardhat": "^2.5.0",
+    "hardhat": "^2.6.0",
+    "hardhat-deploy": "^0.8.11",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.4",
-    "ts-node": "^10.1.0",
+    "hardhat-typechain": "^0.3.5",
+    "ts-generator": "^0.1.1",
+    "ts-morph": "^11.0.3",
+    "ts-node": "^10.2.0",
+    "typechain": "4.0.0",
+    "typechain-target-ethers-v5": "^5.0.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
