--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.3",
     "hardhat": "^2.6.0",
+    "hardhat-contract-sizer": "^2.1.0",
     "hardhat-deploy": "^0.8.11",
     "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "hardhat-gas-reporter": "^1.0.4",
