--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.1",
   "main": "index.ts",
   "repository": "https://github.com/DexKit/coins-league.git",
+  "engines": {
+    "node": "12.18.3"
+   },
+   "license": "MIT",
   "author": "JoaoCampos89 <info@dexkit.com>",
   "scripts": {
-    "test": "npx hardhat  test",
+    "test": "npx hardhat  test test/factory-v2.test.ts",
     "compile": "npx hardhat  compile",
     "deploy:mumbai": "npx hardhat run scripts/deploy-factory.ts --network mumbai",
     "deploy:polygon": "npx hardhat run scripts/deploy-factory-matic.ts --network matic"
