--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "JoaoCampos89 <info@dexkit.com>",
   "scripts": {
     "test": "npx hardhat  test test/computeScores.test.ts",
+    "test:factory": "npx hardhat  test test/factory-v2.test.ts",
     "compile": "npx hardhat  compile",
     "deploy:mumbai": "npx hardhat run scripts/deploy-factory.ts --network mumbai",
-    "deploy:polygon": "npx hardhat run scripts/deploy-factory-matic.ts --network matic"
+    "deploy:polygon": "npx hardhat run scripts/deploy-factory-matic.ts --network matic",
+    "deploy-roles:polygon": "npx hardhat run scripts/deploy-factory-matic-roles.ts --network matic"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
