add room factory

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npx hardhat  test test/computeScores.test.ts",
     "test:factory": "npx hardhat  test test/factory-v2.test.ts",
     "compile": "npx hardhat  compile",
+    "script:whitelist": "npx hardhat run scripts/whitelist-address.ts --network matic",
     "deploy:mumbai": "npx hardhat run scripts/deploy-factory.ts --network mumbai",
     "deploy:polygon": "npx hardhat run scripts/deploy-factory-matic.ts --network matic",
     "deploy-roles:polygon": "npx hardhat run scripts/deploy-factory-matic-roles.ts --network matic"
