add bsc scripts

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "deploy:mumbai": "npx hardhat run scripts/deploy-factory.ts --network mumbai",
     "deploy:polygon": "npx hardhat run scripts/deploy-factory-matic.ts --network matic",
     "deploy:v2:polygon": "npx hardhat run scripts/deploy-factory-matic-v2.ts --network matic",
-    "deploy:v2:binance": "npx hardhat run scripts/deploy-factory-matic-v2.ts --network bsc",
+    "deploy:v2:binance": "npx hardhat run scripts/deploy-factory-bsc-v2.ts --network bsc",
     "deploy-nft:v2:polygon": "npx hardhat run scripts/deploy-factory-nft-matic-v2.ts --network matic",
     "update-settings:v2:polygon": "npx hardhat run scripts/update-settings-matic-v2.ts --network matic",
+    "update-settings:v2:bsc": "npx hardhat run scripts/update-settings-bsc-v2.ts --network bsc",
     "deploy:room:polygon": "npx hardhat run scripts/deploy-room-factory-matic.ts --network matic",
     "deploy-roles:polygon": "npx hardhat run scripts/deploy-factory-matic-roles.ts --network matic",
     "fill-game:polygon": "npx hardhat run scripts/fill-game-v2.ts --network polygon",
